--- a/HojaDeVida.html
+++ b/HojaDeVida.html
@@ -12,7 +12,12 @@
                 <h1 class="titulo-lol">Hoja de Vida</h1>
             </header>
             <section class="PerInfo">
-                <ul>
+                <ul> 
+                    <li>
+                        <div class="fotodeperfil">
+                            <img src="fotodeperfilHV.jpg" alt="fotodeperfilHV" width="125px" height="150px">
+                        </div>
+                    </li>  
                     <h1>Informacion de Contacto</h1>
                     <li>
                         Telefono: 3906788789
@@ -43,6 +48,10 @@
                     <br>
                     <p>  N/A </p>
                 </article>
+                </section>
+                <footer>
+                    <p>Marzo 2023</p>
+                </footer>
         </section>
     </body>
 
